bugfix: DEC-253: chart: add z-index for tooltip

--- a/shared/components/line-chart/line-chart.component.scss
+++ b/shared/components/line-chart/line-chart.component.scss
@@ -14,4 +14,5 @@
   position: absolute;
   transform: translateY(-50%);
   visibility: hidden;
+  z-index: 1;
 }
